PHP 4.0                                                                    NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||

???, Version 4.0 Beta 5
- fixed possible crash in unserialize() if serialized data was
  corrupted. (Thies)
- Changed $HTTP_STATE_VARS to $HTTP_SESSION_VARS. Use only the latter
  version now! (Andrei)
- Add GD-JPEG Support (Rasmus)
- Prevent from loading dynamic PHP modules which were compiled with different
  debug and thread safety modes than PHP, which resulted in a crash (Andi)
- connection_aborted() and friends work again. (Thies)
- Added include_once() and require_once() functionality (Andi, Zend library)
- Removed support for pdflib < 3.0 (Uwe)
- Added auto-registration of everything in $HTTP_SESSION_VARS[] if
  register_globals is turned off. (Andrei)
- Cleaned up extension namespace (Stig)
- OCINLogon() sessions are now closed again. (Thies)
- Added ip2long() and long2ip(),
  courtesy of Faisal Nasim <faisal@nasim.org> (Andrei)
- Added ftruncate() and fstat(),
  courtesy of Faisal Nasim <faisal@nasim.org> (Andrei)
- Added parse_ini_file().  Currently implemented in non thread safe version
  of PHP, and currently lacks section support (Zeev)
- "none" is now equivalent with "" in Apache config directives (Stig)
- OCINLogon no longer crashes. (Thies)
- Fix comparisons of (string) "nan" with (string) "nan". (Thies, Zend library)
- Switched back to the old $HTTP_*_VARS[] behavior - $HTTP_GET_VARS["foo"]
  and $foo are no longer references to each other, but separate variables
  like they were prior to PHP 4.0 Beta 4 (Zeev)
- Fixed Sybase-DB compilation (Zeev)
- Fixed a (fairly common) situation where error_reporting values would not be
  properly restored after a call to error_reporting(), in between requests (Zeev)
- The various $HTTP_*_VARS[] are now protected, and cannot be manipulated by
  user input (Zeev)
- Added ini_set() as an alias to ini_alter() (Zeev)